# loom

./: .gitignore  Cargo.toml  README.md  deny.toml
.github/workflows/: ci.yml
ci/: flaky-check.sh
docs/wiki-book/: README.md  SUMMARY.md
loom-site/: index.html  package-lock.json  package.json
loom-site/src/: App.tsx  style.css
src/: ast.rs  builtin_spec.rs  formatter.rs  lib.rs  loom.pest  main.rs  parser.rs  policy.rs  validator.rs
src/lsp/: catalog.rs  completion.rs  diagnostics.rs  mod.rs  server.rs  symbols.rs  text.rs
src/runtime/: atomic.rs  builtins.rs  directives.rs  env.rs  error.rs  eval.rs  execution.rs  fs.rs  functions.rs  http.rs  imports.rs  limits.rs  mod.rs  pipeline.rs  secrets.rs  security.rs  state.rs  watch.rs
tests/: .env  .loomrc.json  all_transactions.csv  compatibility_semantics.rs  customers.csv  enterprise_quality_suite.rs  fail_fast_semantics.rs  fault_injection.rs  formatter.rs  logic.loom  loomrc_policy.rs  main.loom  out.txt  premium_sales.csv  property_fuzz.rs  runtime_integration.rs  security_policy.rs  test.loom
tests/qa/: mod.rs
tests/unit/: lsp_completion_tests.rs  lsp_text_tests.rs  main_tests.rs  parser_tests.rs  policy_tests.rs  runtime_env_tests.rs  runtime_security_tests.rs  runtime_watch_tests.rs  validator_tests.rs
vscode-loom/: .vscodeignore  README.md  language-configuration.json  package-lock.json  package.json  tsconfig.json
vscode-loom/schemas/: loomrc.schema.json
vscode-loom/scripts/: build-vsix.sh  stage-binary.sh
vscode-loom/snippets/: loom.json
vscode-loom/src/: extension.ts
(+26 files in other folders)
