[package]
name = "loom"
version = "0.1.0"
edition = "2024"

[lib]
name = "loom"
path = "src/lib.rs"

[[bin]]
name = "loom"
path = "src/main.rs"

[dependencies]
pest = "2.7"
pest_derive = "2.7"
tower-lsp = "0.20.0"
tokio = { version = "1.37", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tempfile = "3.10"
csv = "1.3"
notify = "6.1"
log = "0.4"
env_logger = "0.11"
